--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,108 @@
   margin-bottom: 15px;
   display: flex;
   padding: 30px;
+}/* You can add global styles to this file, and also import other style files */
+:root {
+  --primary: #58585a;
+  --secondary: #172ad3;
+  --padding: 15px;
+  --cinza : #405040;
+  --cinza-claro: #dedede;
 }
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+.navbar {
+  background-color: #011844;
+  width: 100%;
+  height: auto;
+  display: flex;
+}
+
+.footer {  
+  display: flex;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-aling: center;
+}
+
+.container {
+  padding: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-field {
+  width: 70%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  color: var(--primary);
+}
+
+.medidas {
+  width: 60%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  padding: 30px;
+}
+
+.table {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-spacing: 10px;
+}
+
+.select {
+  width: 80%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  color: var(--primary);
+}
+
+.label {
+  color: inherit;
+  margin-bottom: 4px;
+  font-size: 25px;
+}
+
+.input {
+  padding: 8px;
+  border-radius: 4px;
+  color: inherit;
+  border: 2px solid;
+  outline: none;
+}
+
+.botao-wrapper {
+  display: flex;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.botao {
+  background-color: var(--primary);
+  color: rgb(255, 255, 255);
+  display: block;
+  flex: 1;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 0.5em;
+  cursor: pointer;
+  transition: opacity 0.2s;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
 .table {
   margin-top: 15px;
